--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   popup_menu: ^2.0.0
   google_fonts: ^5.1.0
   image_picker: ^1.0.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
